[gd_scene load_steps=4 format=3 uid="uid://brgc3jws8hxbp"]

[ext_resource type="Script" uid="uid://cc3t5fsan437" path="res://Systems/Item System/Item.gd" id="1_1ec0x"]

[sub_resource type="LabelSettings" id="LabelSettings_1xpod"]
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_erawd"]
font_size = 66

[node name="Shop_Item" type="Node2D"]
texture_filter = 1
script = ExtResource("1_1ec0x")

[node name="Border_texture_rect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = -105.0
offset_right = 104.5
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color(0.79503334, 0.3311633, 0.6643504, 0.41960785)
offset_left = -159.0
offset_top = -165.0
offset_right = 166.0
offset_bottom = 160.0

[node name="Background_Rect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -101.0
offset_right = 98.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="border_rect" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -105.0
offset_right = 105.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
color = Color(0.67673594, 0.53392845, 0.23370892, 1)

[node name="Item_Name_Label" type="Label" parent="."]
offset_left = -64.0
offset_top = -92.0
offset_right = 59.0
offset_bottom = -62.0
text = "CARD NAME"
label_settings = SubResource("LabelSettings_1xpod")

[node name="Cost_Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -46.0
offset_right = 20.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "6"
label_settings = SubResource("LabelSettings_erawd")
